[CoreBundle] Topbar collapse fix + GUI Update

--- a/Resources/views/less/layout.less
+++ b/Resources/views/less/layout.less
@@ -109,29 +109,33 @@ body {
 /************/
 
 #top_bar {
-    @media(max-width: (@screen-md - 1)) {
+    .dropdown-fix {
+        position: relative;
+        width: 100%;
+        border: none;
+        .box-shadow(none);
+        background: @navbar-inverse-bg;
+        li a {
+            padding-left: 15px;
+            margin: 5px;
+            color: @navbar-inverse-link-color;
+            &:hover {
+                color: @navbar-inverse-link-hover-color;
+            }
+        }
+        .divider{
+            display: none;
+        }
+
         .dropdown-header {
             color: lighten(@navbar-inverse-bg, 20%);
             padding-left: 20px;
         }
+    }
 
+    @media(max-width: (@screen-md - 1)) {
         .dropdown-menu {
-            position: relative;
-            width: 100%;
-            border: none;
-            .box-shadow(none);
-            background: @navbar-inverse-bg;
-            li a {
-                padding-left: 15px;
-                margin: 5px;
-                color: @navbar-inverse-link-color;
-                &:hover {
-                    color: @navbar-inverse-link-hover-color;
-                }
-            }
-            .divider{
-                display: none;
-            }
+            .dropdown-fix;
         }
     }
 
@@ -159,9 +163,50 @@ body {
         margin-left: -15px;
     }
 
-    &.break {
-        .navbar-collapse.collapse {
-            border: 1px solid red;
+    @media(min-width: @screen-md) {
+        //variable break point
+        &.break {
+
+            .navbar-header {
+                width: 100%;
+            }
+
+            .navbar-toggle {
+                display: block;
+            }
+
+            .navbar-collapse.collapse {
+                display: none !important;
+            }
+            .navbar-collapse.in {
+                display: block;
+            }
+            .navbar-collapse.collapsing {
+                overflow: hidden !important;
+            }
+            .navbar-collapse {
+                overflow: auto !important;
+                max-height: 340px  !important;
+                overflow-x: visible  !important;
+                .navbar-nav {
+                    &, li {
+                        width: 100%;
+                    }
+
+                    li a {
+                        padding-left: 10px;
+                        padding-right: 10px;
+                    }
+
+                    &.navbar-right {
+                        margin-right: 0;
+                    }
+
+                    .dropdown-menu {
+                        .dropdown-fix;
+                    }
+                }
+            }
         }
     }
 }
